--- a/src/main/resources/templates/resumenEntrada.html
+++ b/src/main/resources/templates/resumenEntrada.html
@@ -11,7 +11,23 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Resumen de entradas</h1>
+            <h1 class="mt-5">Gracias por su compra</h1>
+            <div class="d-flex mt-5">
+                <div class="d-flex flex-column">
+                    <h5><span class="bold">Cine:</span> La Gavia</h5>
+                    <h5><span class="bold">Película:</span> El Gran Patrón</h5>
+                    <h5><span class="bold">Sesión:</span> 21:00</h5>
+                    <h5><span class="bold">Número de entradas:</span> 10</h5>
+                    <h5><span class="bold">Precio final:</span> 115,00€</h5>
+                    <button type="button" class="btn btn-dark mt-4">Imprimir entrada</button>
+                    <button type="button" class="btn btn-dark mt-2">Descargar en PDF</button>
+                </div>
+                <div class="d-flex flex-column align-items-center ms-5">
+                    <img th:src="@{/img/qrtest.png}" src="/img/qrtest.png" alt="imagen cine" height="268px" width="268px" class="d-inline-block">
+                    <h6 class="bold">67G5HJ4F</h6>
+                </div>
+            </div>
+            <div class="d-flex enlacepel mt-5"><a class="text-dark" th:href="@{/peliculas}">Volver a películas</a></div>
         </div>
     </main>
 
