--- a/src/main/resources/templates/resumenEntrada.html
+++ b/src/main/resources/templates/resumenEntrada.html
@@ -27,7 +27,7 @@
                     <h6 class="bold">67G5HJ4F</h6>
                 </div>
             </div>
-            <div class="d-flex enlacepel mt-5"><a class="text-dark" th:href="@{/peliculas}">Volver a películas</a></div>
+            <div class="d-flex enlacepel mt-5"><a class="text-dark" th:href="@{/peliculas/}">Volver a películas</a></div>
         </div>
     </main>
 
