--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -38,7 +38,7 @@
                                     <td><a th:href="@{/peliculas/1}" class="text-dark bold">El buen patrón</a></td>
                                     <td>21:00</td>
                                     <td>La Gavia</td>
-                                    <td><button type="button" class="btn btn-dark btn-sm">Ver entrada</button></td>
+                                    <td><a th:href="@{/entradas/67G5HJ4F}" ><button type="button" class="btn btn-dark btn-sm">Ver entrada</button></a></td>
                                 </tr>
                                 <tr>
                                     <td>2 entradas</td>
